# rag-api-server

./: Cargo.toml  README.md  check_code_before_commit.sh
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  test_api_server.yml
docs/: keyword_search.md  vectordb.md
src/: error.rs  main.rs  utils.rs
src/backend/: ggml.rs  mod.rs
src/search/: bing_search.rs  local_google_search.rs  mod.rs  tavily_search.rs
tests/: test_chat.hurl  test_embeddings.hurl  test_rag.hurl
