[package]
name = "rag-api-server"
version = "0.9.5"
edition = "2021"

[dependencies]
anyhow = "1"
chat-prompts = { version = "=0.16.0" }
chrono = "0.4.38"
clap = { version = "4.4.6", features = ["cargo"] }
either = "1.12.0"
endpoints = { version = "=0.14.2" }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
llama-core = { version = "=0.18.0", features = ["logging"] }
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
mime_guess = "2.0.4"
multipart-2021 = "0.19.0"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
url = "^2.5"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.5.0"
wasi-logger = { version = "0.1.2", features = ["kv"] }

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }

[features]
default = []
